--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <form action="work.php" method="post">
-        <h3>F_Name:<input type="text" name="fn" id="fn" value="F_NAME:"></h3>
-        <h3>M_Name:<input type="text" name="fn" id="fn" value="M_NAME:"></h3>
-        <h3>L_Name:<input type="text" name="fn" id="fn" value="L_NAME:"></h3>
-        <h3>Email :<input type="email" name="fn" id="fn" value="Email:"></h3>
-        <h3>Age:<input type="number" name="fn" id="fn" value="20"></h3>
+        <h3>F_Name:<input type="text" name="fn" id="fn" value="your first name"></h3>
+        <h3>M_Name:<input type="text" name="fn" id="fn" value="your middle name"></h3>
+        <h3>L_Name:<input type="text" name="fn" id="fn" value="your last name"></h3>
+        <h3>Email :<input type="email" name="fn" id="fn" value="your Email"></h3>
+        <h3>Age:<input type="number" name="fn" id="fn" value="your age"></h3>
         <h3>Gender: <input type="radio" name="fn" id="fn" value="Gender">Male
           <input type="radio" name="fn" id="fn" value="Gender">Female</h3>
         <h3>Select Skills :<input type="checkbox" name="fn" id="fn" value="C++">C++
@@ -28,7 +28,6 @@
 
         <h2>
             <input type="button" value="Submit">
-            <input type="button" value="Exit"></form>
         </h2>      
     </form>
 </body>
